finished nav and hero

--- a/index.html
+++ b/index.html
@@ -11,6 +11,39 @@
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="./style.css">
+
+    <!-- Fontawesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+        integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+
+    <title>Personal Portfolio</title>
 </head>
+
+<body data-spy="scroll" data-target="#navbarMenu">
+    <nav id="navbarMenu" class="navbar navbar-expand w-100 border-bottom navbar-fixed-top">
+        <div class="d-flex flex-grow-1">
+            <a class="navbar-brand my_name text-white" href="#">Jose Martinez</a>
+            <div class="navbar-nav ml-auto">
+                <a class="nav-item nav-link text-dark" href="#">Portfolios</a>
+                <a class="nav-item nav-link text-dark" href="#">About</a>
+            </div>
+        </div>
+    </nav>
+
+    <!--Hero-->
+    <div id="hero">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <div class="hero_content d-flex flex-column align-items-end">
+                        <h1>Jose Martinez</h1>
+                        <h3>Systems Engineer</h3>
+                        <hr class="divider">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
 
 </html>
