Porfolio section ready

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="./style.css">
+    <script src="./commands.js"></script>
 
     <!-- Fontawesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
@@ -39,6 +40,67 @@
                         <h1>Jose Martinez</h1>
                         <h3>Systems Engineer</h3>
                         <hr class="divider">
+                        <ul class="social-links d-flex flex-row">
+                            <li>
+                                <a href="#" class="btn btn-secondary btn-lg github"><i
+                                        class="fab fa-github-square"></i></a>
+                            </li>
+                            <li>
+                                <a href="#" class="btn btn-secondary btn-lg linkedin"><i
+                                        class="fab fa-linkedin"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--Portfolios-->
+    <div class="portfolio_section container-fluid">
+        <div class="row">
+            <div class="col-xs-12 col-md-10 offset-md-1 col-lg-10 offset-lg-1">
+                <p class="text-center portfolio_header">Portfolios</p>
+                <div class="row">
+                    <div class="col-sm-12 col-md-6">
+                        <a href="https://placeholder.com" class="aspectRatioBox">
+                            <img src="https://via.placeholder.com/820X420.png" class="img-fluid">
+                        </a>
+                        <p class="description">Project description</p>
+                    </div>
+                    <div class="col-sm-12 col-md-6">
+                        <a href="https://placeholder.com" class="aspectRatioBox">
+                            <img src="https://via.placeholder.com/820X420.png" class="img-fluid">
+                        </a>
+                        <p class="description">Project description</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-6">
+                        <a href="https://placeholder.com" class="aspectRatioBox">
+                            <img src="https://via.placeholder.com/820X420.png" class="img-fluid">
+                        </a>
+                        <p class="description">Project description</p>
+                    </div>
+                    <div class="col-sm-12 col-md-6">
+                        <a href="https://placeholder.com" class="aspectRatioBox">
+                            <img src="https://via.placeholder.com/820X420.png" class="img-fluid">
+                        </a>
+                        <p class="description">Project description</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-6">
+                        <a href="https://placeholder.com" class="aspectRatioBox">
+                            <img src="https://via.placeholder.com/820X420.png" class="img-fluid">
+                        </a>
+                        <p class="description">Project description</p>
+                    </div>
+                    <div class="col-sm-12 col-md-6">
+                        <a href="https://placeholder.com" class="aspectRatioBox">
+                            <img src="https://via.placeholder.com/820X420.png" class="img-fluid">
+                        </a>
+                        <p class="description">Project description</p>
                     </div>
                 </div>
             </div>
