Updates on files

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 </head>
 
 <body data-spy="scroll" data-target="#navbarMenu">
-    <nav id="navbarMenu" class="navbar navbar-expand w-100 border-bottom navbar-fixed-top">
+    <nav id="navbarMenu" class="navbar navbar-expand w-100 navbar-fixed-top">
         <div class="d-flex flex-grow-1">
-            <a class="navbar-brand my_name text-dark" href="#top">Jose Martinez</a>
+            <h6><a class="navbar-brand my_name text-dark" href="#top">Jose Martinez</a></h6>
             <div class="navbar-nav ml-auto">
-                <a class="nav-item nav-link text-dark" href="#portfolio">Portfolios</a>
-                <a class="nav-item nav-link text-dark" href="#about">About</a>
+                <h6><a class="nav-item nav-link text-dark" href="#portfolio">Portfolios</a></h6>
+                <h6><a class="nav-item nav-link text-dark" href="#about">About</a></h6>
             </div>
         </div>
     </nav>
@@ -47,7 +47,7 @@
                                         class="fab fa-github-square"></i></a>
                             </li>
                             <li>
-                                <a href="https://www.linkedin.com/in/josemar19/"
+                                <a href="https://www.linkedin.com/in/jmauriciomtz/"
                                     class="btn btn-secondary btn-lg linkedin"><i class="fab fa-linkedin"></i></a>
                             </li>
                         </ul>
@@ -64,44 +64,53 @@
                 <p class="text-center portfolio_header">Portfolios</p>
                 <div class="row">
                     <div class="col-sm-12 col-md-6">
-                        <a href="https://placeholder.com" class="aspectRatioBox">
-                            <img src="https://via.placeholder.com/820X420.png" class="img-fluid">
+                        <a href="https://github.com/Jmauriciomtz/AirbnbClone" class="aspectRatioBox">
+                            <img src="./images/Airbnb.PNG" class="img-fluid">
                         </a>
-                        <p class="description">Project description</p>
+                        <p class="description lead">Airbnb clone responsive layout. Single page website utilizing HTML, CSS and Bootstrap 4.</p>
                     </div>
                     <div class="col-sm-12 col-md-6">
-                        <a href="https://placeholder.com" class="aspectRatioBox">
-                            <img src="https://via.placeholder.com/820X420.png" class="img-fluid">
+                        <a href="https://github.com/Jmauriciomtz/newsWeekClone" class="aspectRatioBox">
+                            <img src="./images/newsWeek.PNG" class="img-fluid">
                         </a>
-                        <p class="description">Project description</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-12 col-md-6">
-                        <a href="https://placeholder.com" class="aspectRatioBox">
-                            <img src="https://via.placeholder.com/820X420.png" class="img-fluid">
-                        </a>
-                        <p class="description">Project description</p>
-                    </div>
-                    <div class="col-sm-12 col-md-6">
-                        <a href="https://placeholder.com" class="aspectRatioBox">
-                            <img src="https://via.placeholder.com/820X420.png" class="img-fluid">
-                        </a>
-                        <p class="description">Project description</p>
+                        <p class="description lead">Newsweek clone responsive layout. Single page website utilizing HTML, CSS and Bootstrap 4.</p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-sm-12 col-md-6">
-                        <a href="https://placeholder.com" class="aspectRatioBox">
-                            <img src="https://via.placeholder.com/820X420.png" class="img-fluid">
+                        <a href="https://github.com/Jmauriciomtz/AppleClone" class="aspectRatioBox">
+                            <img src="./images/appleSite.PNG" class="img-fluid">
                         </a>
-                        <p class="description">Project description</p>
+                        <p class="description lead">Apple clone layout. Single page website utilizing HTML and CSS.</p>
                     </div>
                     <div class="col-sm-12 col-md-6">
-                        <a href="https://placeholder.com" class="aspectRatioBox">
-                            <img src="https://via.placeholder.com/820X420.png" class="img-fluid">
+                        <a href="https://github.com/Jmauriciomtz/todoList2" class="aspectRatioBox">
+                            <img src="./images/toDoList.PNG" class="img-fluid">
                         </a>
-                        <p class="description">Project description</p>
+                        <p class="description lead">To-do list App. App connected to ATDAPI service, allowing persistent data to maintain
+                            when leaving and entering app. This is possible by utilizing jQuery AJAX, JSON and RESTful API.
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-6">
+                        <a href="https://github.com/Jmauriciomtz/10SecMathGame" class="aspectRatioBox">
+                            <img src="./images/10SecMathGame.PNG" class="img-fluid">
+                        </a>
+                        <p class="description lead">Game shows user simple math equation with 10 second timmer. Each time
+                            answer correct 1 second added to the timmer. Game score and high score displayed for tab session.
+                            This is possible by utilizing object oriented programming, DOM Manipulation and Event Listener.
+                        </p>
+                    </div>
+                    <div class="col-sm-12 col-md-6">
+                        <a href="https://github.com/Jmauriciomtz/stockPortfolio" class="aspectRatioBox">
+                            <img src="./images/stockPortfolio.PNG" class="img-fluid">
+                        </a>
+                        <p class="description lead">Stock profit and loss tracking portfolio. User can add stock by inputing
+                            Name of stock, amount of shares bought, cost per share and current price of share. App will 
+                            generate market value and gain/loss data for each stock. This is possible by utilizing object oriented programming, 
+                            DOM Manipulation and Event Listener.
+                        </p>
                     </div>
                 </div>
                 <div class="row about_section" id="about">
@@ -112,13 +121,12 @@
                 <div class="row pb-4">
                     <div class="col-xs-12 col-md-8 offset-md-2">
                         <div class="row d-flex flex-row align-items-center">
-                            <div class="col-4 aling">
+                            <div class="col-4">
                                 <img class="img-fluid aspectRatioBox pt-0" src="./images/profile_pic.jpg">
                             </div>
                             <div class="col-8 about_section_info">
-                                <p>Jose Martinez, a System's Engineer with experience in logistics and automation.
-                                    Has a passion for programming and is currently persuing Full Stack Web Development
-                                    certificate.
+                                <p>Jose Martinez, a Systems Engineer with 2 years experience in logistics, software development and automation.
+                                    Plus 1 year experience in web development. Enjoys solving complex problems and working with like minded people.
                                 </p>
                             </div>
                         </div>
